// Database schema for XgameProject (PostgreSQL)
// Visualize with https://dbdiagram.io

Enum user_status {
  active
  banned
  deleted
}

Enum verification_code_type {
  phone
  verify_email
  change_phone
  password_reset
  "2fa"
}

Enum notification_type {
  order_placed
  order_shipped
  order_delivered
  order_cancelled
  payment_success
  payment_failed
}

Table users {
  id uuid [pk, default: `uuid_generate_v4()`]
  phone varchar(15) [unique, not null]
  email varchar(255) [unique]
  password_hash varchar(255) [not null]
  full_name varchar(255)
  avatar_url varchar(500)
  phone_verified boolean [default: false]
  email_verified boolean [default: false]
  status user_status [default: 'active']
  role varchar(20) [default: 'customer']
  date_of_birth date
  gender varchar(10)
  last_login_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    phone [name: 'idx_users_phone']
    email [name: 'idx_users_email']
    role [name: 'idx_users_role']
    status [name: 'idx_users_status']
    (role, status) [name: 'idx_users_role_status']
    status [name: 'idx_users_active_status', note: "partial WHERE status = 'active'"]
    last_login_at [name: 'idx_users_last_login']
  }
}

Table verification_codes {
  id integer [pk]
  user_id uuid [ref: > users.id]
  contact_value varchar(255) [not null, note: 'phone/email tùy type']
  code varchar(10) [not null]
  type verification_code_type [not null]
  expires_at timestamp [not null]
  is_used boolean [default: false]
  attempts integer [default: 0]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  note: "CHK: type='phone' => user_id IS NULL; type!='phone' => user_id IS NOT NULL"

  indexes {
    user_id [name: 'idx_verification_codes_user']
    contact_value [name: 'idx_verification_codes_contact']
    code [name: 'idx_verification_codes_code']
    (type, expires_at) [name: 'idx_verification_codes_type_expires']
    (contact_value, type) [name: 'idx_verification_codes_contact_type']
  }
}

Table categories {
  id integer [pk]
  parent_id integer [ref: > categories.id, note: 'NULL = danh mục gốc']
  name varchar(255) [not null]
  slug varchar(255) [unique, not null]
  image_url varchar(500)
  description text
  display_order integer [default: 0]
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  deleted_at timestamp

  indexes {
    parent_id [name: 'idx_categories_parent']
    slug [name: 'idx_categories_slug']
    (is_active, deleted_at) [name: 'idx_categories_active']
    (display_order, is_active) [name: 'idx_categories_display_order', note: 'partial WHERE deleted_at IS NULL']
  }
}

Table products {
  id integer [pk]
  category_id integer [ref: > categories.id]
  sku varchar(100) [note: 'unique index với điều kiện WHERE sku IS NOT NULL AND deleted_at IS NULL']
  name varchar(255) [not null]
  description text
  price integer [not null]
  stock_quantity integer [default: 0]
  brand varchar(100)
  view_count integer [default: 0]
  sold_count integer [default: 0]
  is_active boolean [default: true]
  search_vector tsvector [note: 'auto-updated trigger']
  embedding vector(1536) [note: 'requires pgvector extension, optional']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  deleted_at timestamp

  indexes {
    category_id [name: 'idx_products_category']
    name [name: 'idx_products_name']
    price [name: 'idx_products_price']
    created_at [name: 'idx_products_created_at']
    is_active [name: 'idx_products_active', note: 'partial WHERE is_active = true']
    sku [name: 'idx_products_sku', note: 'unique partial WHERE sku IS NOT NULL AND deleted_at IS NULL']
    search_vector [name: 'idx_products_search_vector', type: gin]
    (category_id, is_active) [name: 'idx_products_category_active', note: 'partial WHERE is_active = true']
    (price, category_id) [name: 'idx_products_price_range', note: 'partial WHERE is_active = true']
    embedding [name: 'idx_products_embedding', note: 'HNSW if pgvector available']
  }
}

Table product_variants {
  id integer [pk]
  product_id integer [ref: > products.id, note: 'ON DELETE CASCADE']
  sku varchar(100) [note: 'SKU riêng cho từng biến thể, ví dụ: AO-THUN-001-M-DO. Unique index với điều kiện WHERE sku IS NOT NULL AND deleted_at IS NULL']
  variant_attributes jsonb [not null, default: '{}', note: 'Kết hợp các thuộc tính dạng JSON: {"Size": "M", "Color": "Đỏ", "Material": "Cotton"}']
  price_adjustment integer [default: 0, note: 'Điều chỉnh giá so với giá gốc (VND), +50000 = tăng 50k, -30000 = giảm 30k']
  stock_quantity integer [default: 0, note: 'Số lượng tồn kho của biến thể này']
  image_url varchar(500) [note: 'Ảnh riêng cho biến thể (ví dụ: màu khác nhau có ảnh khác nhau)']
  is_active boolean [default: true, note: 'Ẩn/hiện biến thể']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  deleted_at timestamp

  indexes {
    product_id [name: 'idx_product_variants_product']
    sku [name: 'idx_product_variants_sku', note: 'unique partial WHERE sku IS NOT NULL AND deleted_at IS NULL']
    variant_attributes [name: 'idx_product_variants_attributes', note: 'GIN index cho JSONB']
    (is_active, deleted_at) [name: 'idx_product_variants_active']
    (product_id, is_active) [name: 'idx_product_variants_product_active', note: 'partial WHERE deleted_at IS NULL']
  }
  
  Note: 'Constraint UNIQUE (product_id, variant_attributes) - đảm bảo không trùng kết hợp thuộc tính. Hỗ trợ nhiều thuộc tính cùng lúc: Size + Color + Material...'
}

Table product_media {
  id integer [pk]
  product_id integer [ref: > products.id, note: 'ON DELETE CASCADE']
  variant_id integer [ref: > product_variants.id, note: 'ON DELETE CASCADE, nullable - có thể null nếu media thuộc về sản phẩm chung']
  type varchar(20) [not null, default: 'image']
  image_url varchar(500) [not null]
  alt_text varchar(255)
  display_order integer [default: 0]
  is_primary boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    product_id [name: 'idx_product_media_product']
    variant_id [name: 'idx_product_media_variant']
    (product_id, is_primary) [name: 'idx_product_media_primary']
  }
}

Table product_tags {
  id integer [pk]
  name varchar(100) [unique, not null]
  slug varchar(100) [unique, not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table product_tag_relations {
  product_id integer [ref: > products.id, note: 'ON DELETE CASCADE']
  tag_id integer [ref: > product_tags.id, note: 'ON DELETE CASCADE']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  indexes {
    (product_id, tag_id) [pk]
    product_id [name: 'idx_product_tag_relations_product']
    tag_id [name: 'idx_product_tag_relations_tag']
  }
}

Table cart_items {
  id integer [pk]
  user_id uuid [ref: > users.id, note: 'ON DELETE CASCADE']
  product_id integer [ref: > products.id, note: 'ON DELETE CASCADE']
  variant_id integer [ref: > product_variants.id, note: 'nullable - có thể null nếu sản phẩm không có biến thể']
  quantity integer [not null, default: 1]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    user_id [name: 'idx_cart_items_user']
    (user_id, product_id, variant_id) [unique, name: 'cart_items_unique']
  }
}

Table orders {
  id integer [pk]
  user_id uuid [ref: > users.id, note: 'ON DELETE SET NULL']
  order_number varchar(50) [unique, not null]
  subtotal decimal(10, 2) [not null]
  discount_amount decimal(10, 2) [default: 0]
  tax_amount decimal(10, 2) [default: 0]
  shipping_fee decimal(10, 2) [default: 0]
  total_amount decimal(10, 2) [not null]
  shipping_address text [not null]
  payment_method varchar(50) [not null]
  payment_status varchar(20) [default: 'pending']
  order_status varchar(20) [default: 'pending']
  cancelled_at timestamp
  cancelled_by uuid [ref: > users.id, note: 'ON DELETE SET NULL']
  cancellation_reason text
  delivery_date date
  notes text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  deleted_at timestamp

  indexes {
    user_id [name: 'idx_orders_user']
    order_status [name: 'idx_orders_status']
    payment_status [name: 'idx_orders_payment_status']
    created_at [name: 'idx_orders_created_at']
    order_number [name: 'idx_orders_order_number']
  }
}

Table order_items {
  id integer [pk]
  order_id integer [ref: > orders.id, note: 'ON DELETE CASCADE']
  product_id integer [ref: > products.id]
  variant_id integer [ref: > product_variants.id, note: 'nullable - có thể null nếu sản phẩm không có biến thể']
  quantity integer [not null]
  price decimal(10, 2) [not null, note: 'đơn giá VND tại thời điểm đặt hàng']
  product_name text [note: 'Snapshot tên sản phẩm tại thời điểm đặt hàng']
  product_sku varchar(100) [note: 'Snapshot SKU sản phẩm tại thời điểm đặt hàng']
  variant_sku varchar(100) [note: 'Snapshot SKU biến thể tại thời điểm đặt hàng']
  variant_attributes_snapshot jsonb [note: 'Snapshot thuộc tính biến thể tại thời điểm đặt hàng']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    order_id [name: 'idx_order_items_order']
    product_id [name: 'idx_order_items_product']
    product_sku [name: 'idx_order_items_product_sku']
    variant_sku [name: 'idx_order_items_variant_sku']
  }
}

Table shipping {
  id integer [pk]
  order_id integer [ref: > orders.id, note: 'ON DELETE CASCADE']
  shipping_provider varchar(50)
  tracking_number varchar(100)
  shipping_fee decimal(10, 2) [not null]
  estimated_delivery_date timestamp
  status varchar(20) [default: 'pending', note: 'pending|picked_up|in_transit|delivered|failed|returned']
  notes text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    order_id [name: 'idx_shipping_order']
    tracking_number [name: 'idx_shipping_tracking']
  }
}

Table payment_transactions {
  id integer [pk]
  order_id integer [ref: > orders.id, note: 'ON DELETE CASCADE']
  transaction_id varchar(100) [unique]
  payment_gateway varchar(50) [not null]
  amount decimal(10, 2) [not null]
  status varchar(20) [not null, default: 'pending']
  response_data jsonb
  error_message text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    order_id [name: 'idx_payment_transactions_order']
    transaction_id [name: 'idx_payment_transactions_transaction_id']
    status [name: 'idx_payment_transactions_status']
    payment_gateway [name: 'idx_payment_transactions_gateway']
    created_at [name: 'idx_payment_transactions_created_at']
  }
}

Table user_addresses {
  id integer [pk]
  user_id uuid [ref: > users.id, note: 'ON DELETE CASCADE']
  province varchar(100) [not null]
  district varchar(100) [not null]
  ward varchar(100) [not null]
  province_code integer [not null, note: 'GHN ProvinceID']
  district_code integer [not null, note: 'GHN DistrictID']
  ward_code varchar(50) [not null, note: 'GHN WardCode']
  street_address text [not null]
  is_default boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  deleted_at timestamp [note: 'Soft delete']

  indexes {
    user_id [name: 'idx_user_addresses_user']
    (user_id, is_default) [name: 'idx_user_addresses_default']
    deleted_at [name: 'idx_user_addresses_deleted_at']
    (user_id, deleted_at) [name: 'idx_user_addresses_user_not_deleted']
  }
}

Table wishlist {
  id integer [pk]
  user_id uuid [ref: > users.id, note: 'ON DELETE CASCADE']
  product_id integer [ref: > products.id, note: 'ON DELETE CASCADE']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    user_id [name: 'idx_wishlist_user']
    product_id [name: 'idx_wishlist_product']
    (user_id, product_id) [name: 'wishlist_unique', unique]
  }
}

Table notifications {
  id integer [pk]
  user_id uuid [ref: > users.id, note: 'ON DELETE CASCADE']
  type notification_type [not null]
  title varchar(255) [not null]
  message text [not null]
  link varchar(500)
  is_read boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    user_id [name: 'idx_notifications_user']
    type [name: 'idx_notifications_type']
    is_read [name: 'idx_notifications_is_read']
  }
}

Table app_settings {
  id integer [pk]
  key text [unique, not null, note: 'Key của setting, ví dụ: auth.require_firebase_for_phone_registration']
  value jsonb [not null, note: 'Giá trị dạng JSON, ví dụ: {"enabled": true}']
  description text [note: 'Mô tả setting']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`, note: 'Auto-updated by trigger']

  indexes {
    key [name: 'idx_app_settings_key']
  }
  
  Note: 'Bảng lưu các cấu hình toàn hệ thống (feature flags). Có trigger tự động cập nhật updated_at.'
}
